WIP: completed print get data on metadata tables still get a bug on resourceHandler configuration, worth for learn d it later